initial pattern match
needs testing
TODO: bot simulation using pattern.